devspace-deployment/kube-proxy/ingress.yaml
# This is a Kubernetes Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  # The name of the Ingress
  name: slack-bot-proxy-ingress

  # Annotations are arbitrary metadata you can attach to the Ingress object
  annotations:
    # Specifies the issuer that should be used to issue the certificate
    cert-manager.io/cluster-issuer: <your-cluster-issuer>

    # Specifies the external DNS hostname for this Ingress
    external-dns.alpha.kubernetes.io/hostname: <your-domain-name>

    # Sets custom HTTP headers to add security
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Server";
      more_clear_headers "X-Powered-By";
      more_set_headers "X-Frame-Options SAMEORIGIN";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Permitted-Cross-Domain-Policies: none";
      more_set_headers "Referrer-Policy: no-referrer";

spec:
  ingressClassName: "nginx"
  # A list of host rules used to route traffic
  rules:
    - host: <your-domain-name>
      http:
        paths:
          - backend:
              service:
                name: slack-bot-proxy-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  # The configuration for TLS
  tls:
    - hosts:
        - <your-domain-name>
      # The name of the Secret that contains the TLS private key and certificate
      secretName: slack-bot-ssl
